--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>home/about us/how to help/ contact us</header>
+    <header>home/about us/how to help/ contact us
+        
+    </header>
 
     <main>our services</main>
 
