add style to css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>home/about us/how to help/ contact us
-        
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Building 4 You</h1>
+        </a>
     </header>
+
 
     <main>our services</main>
 
