--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <a href="index.html">
             <h1 id="logo">Building 4 You</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href=""></a>About Us</li>
+                <li><a href=""></a>How to Help</li>
+                <li><a href=""></a>Contact US</li>
+            </ul>
+        </nav>
     </header>
 
 
