--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1 id="logo">Building 4 You</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href=""></a>About Us</li>
+            <ul id="menu">
+                <li><a href="" class="active"></a>About Us</li>
                 <li><a href=""></a>How to Help</li>
                 <li><a href=""></a>Contact US</li>
             </ul>
