--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Building 4 you</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1 id="logo">Building 4 You</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">XX</label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active"></a>About Us</li>
