setting some styles

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">Building 4 You</h1>
+            <h1 id="logo">building 4u</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">XX</label>
         <nav>
             <ul id="menu">
-                <li><a href="" class="active"></a>About Us</li>
-                <li><a href=""></a>How to Help</li>
-                <li><a href=""></a>Contact US</li>
+                <li><a href="" class="active">about us</a></li>
+                <li><a href="">how to help</a></li>
+                <li><a href="">contact us</a></li>
             </ul>
         </nav>
     </header>
