add instagram icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
     <main>our services</main>
 
-    <footer>links for social media</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+    </footer>
     
+    <script src="https://kit.fontawesome.com/625ddb3290.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
