--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Building 4 you. House in Dublin Ireland, where the community LGBTQAPN+ can find some help">
+    <meta name="description"
+        content="Building 4 you. House in Dublin Ireland, where the community LGBTQAPN+ can find some help">
     <meta name="keywords" content="LGBT community, LGBTQAPN, help your community, stay safe, Ireland, Dublin">
     <title>Building 4 you</title>
     <link rel="stylesheet" href="assets/css/style.css">
@@ -30,11 +32,24 @@
 
     <footer>
         <ul>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Tik Tok page (opens in a new tab)"><i class="fa-brands fa-tiktok"></i></a>
+            </li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Fabebook page (opens in a new tab)"><i
+                        class="fa-brands fa-facebook-f"></i></a></li>
         </ul>
     </footer>
-    
+
     <script src="https://kit.fontawesome.com/625ddb3290.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
