--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">building 4u</h1>
+            <h1 id="logo">building<i class="fa-solid fa-4"></i>u</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">XX</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-regular fa-building"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">about us</a></li>
@@ -31,7 +31,7 @@
     <main>our services</main>
 
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-instagram"></i></a></li>
