add others pages

--- a/contactus.html
+++ b/contactus.html
@@ -20,15 +20,15 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-regular fa-building"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="aboutus.html" class="active">about us</a></li>
+                <li><a href="aboutus.html">about us</a></li>
                 <li><a href="howtohelp.html">how to help</a></li>
-                <li><a href="contactus.html">contact us</a></li>
+                <li><a href="contactus.html" class="active">contact us</a></li>
             </ul>
         </nav>
     </header>
 
 
-    <main>our services</main>
+    <main>contact us</main>
 
     <footer>
         <ul id="social-networks">
