--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </header>
 
 
-    <main>our services</main>
+    <main>
+        <section id="hero"></section>
+    </main>
 
     <footer>
         <ul id="social-networks">
