--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
 
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>building 4 you</h2>
+                <h3>building a more inclusive community for all</h3>
+            </div>
+        </section>
     </main>
 
     <footer>
