--- a/index.html
+++ b/index.html
@@ -35,6 +35,38 @@
                 <h3>building a more inclusive community for all</h3>
             </div>
         </section>
+        <section id="reasons">
+            <h2>our services</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>social clinic <i class="fa-solid fa-house-chimney-medical"></i></h3>
+                        <hr>
+                        <p>testing for HIV and STIs. consultation with psychologist.</p>
+                    </div>
+                    <div>
+                        <h3>acolhimento <i class="fa-solid fa-door-open"></i></h3>
+                        <hr>
+                        <p>are you in a vulnerable situation? do you need support? chat and count on us!</p>
+                    </div>
+                </div>
+                <div id="benefits-mental">
+                    <div>
+                        <h3>theater workshop <i class="fa-solid fa-masks-theater"></i></h3>
+                        <hr>
+                        <p>come learn theater techniques and express yourself through art, tuesday and thursday at 10am and 2pm.</p>
+                    </div>
+                    <div>
+                        <h3>drawing workshop <i class="fa-solid fa-palette"></i></h3>
+                        <hr>
+                        <p>come learn drawing techniques and how to express yourself through art, monday and wednesday at 10am and 2pm</p>
+                    </div>
+                </div>
+                <div id="hand-image">
+                    <div id="circle-cover-bg"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
