add style to our services

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </section>
         <section id="reasons">
             <h2>our services</h2>
-            <div id="benefits">
-                <div id="benefits-physical">
+            <div id="services">
+                <div id="services-health">
                     <div>
                         <h3>social clinic <i class="fa-solid fa-house-chimney-medical"></i></h3>
                         <hr>
@@ -50,7 +50,7 @@
                         <p>are you in a vulnerable situation? do you need support? chat and count on us!</p>
                     </div>
                 </div>
-                <div id="benefits-mental">
+                <div id="services-mental">
                     <div>
                         <h3>theater workshop <i class="fa-solid fa-masks-theater"></i></h3>
                         <hr>
