add style for computer display

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>testing for HIV and STIs. consultation with psychologist.</p>
                     </div>
                     <div>
-                        <h3>acolhimento <i class="fa-solid fa-door-open"></i></h3>
+                        <h3>welcome <i class="fa-solid fa-door-open"></i></h3>
                         <hr>
                         <p>are you in a vulnerable situation? do you need support? chat and count on us!</p>
                     </div>
