--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,44 @@
     </header>
 
 
-    <main>about us</main>
+    <main>
+        <section>
+            <h1>welcome</h1>
+            <br>
+            <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and providing essential
+                support to the lgbtqapn+ community. we are an ngo that understands the importance of creating a safe and
+                welcoming space for those facing vulnerabilities, and we work tirelessly to offer support in various
+                areas.</p>
+            <br>
+            <p>at building4u, we believe that health is a fundamental right. therefore, we promote vital healthcare
+                services, including rapid testing for hiv and other sexually transmitted infections (stis), as well as
+                offering specialized psychological support. our team of professionals is prepared to provide the
+                necessary assistance, ensuring that each individual feels valued and well cared for.</p>
+            <br>
+            <p>in addition to healthcare, we recognize the transformative power of art in people's lives. we offer
+                theater and painting classes, creating opportunities for our participants to explore their creativity,
+                develop new skills, and find a form of personal expression. these activities not only promote emotional
+                well-being but also strengthen self-esteem and a sense of community belonging.</p>
+            <br>
+            <p>we invite you to join us in this mission. there are several ways to contribute to our project. if you
+                want to make a difference, consider becoming a volunteer. your time and skills can have a significant
+                impact on many lives. alternatively, you can support our work through financial donations. each
+                contribution helps us expand our services and reach more people in need.</p>
+            <br>
+            <p>inclusion and support for the lgbtqapn+ community are responsibilities for all of us. together, we can
+                build a more just and welcoming future for everyone. follow our actions, participate in our activities,
+                and help building4u continue transforming lives.</p>
+            <br>
+            <p>thank you very much for your visit and support!</p>
+            <br>
+            <p>the building4u team <i class="fa-regular fa-building"></i></p>
+        </section>
+        <br>
+        <br>
+        <section>
+            <h1>how to help?</h1>
+        </section>
+    </main>
 
     <footer>
         <ul id="social-networks">
