--- a/aboutus.html
+++ b/aboutus.html
@@ -30,40 +30,81 @@
 
     <main>
         <section>
-            <h1>welcome</h1>
-            <br>
-            <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and providing essential
-                support to the lgbtqapn+ community. we are an ngo that understands the importance of creating a safe and
-                welcoming space for those facing vulnerabilities, and we work tirelessly to offer support in various
-                areas.</p>
-            <br>
-            <p>at building4u, we believe that health is a fundamental right. therefore, we promote vital healthcare
-                services, including rapid testing for hiv and other sexually transmitted infections (stis), as well as
-                offering specialized psychological support. our team of professionals is prepared to provide the
-                necessary assistance, ensuring that each individual feels valued and well cared for.</p>
-            <br>
-            <p>in addition to healthcare, we recognize the transformative power of art in people's lives. we offer
-                theater and painting classes, creating opportunities for our participants to explore their creativity,
-                develop new skills, and find a form of personal expression. these activities not only promote emotional
-                well-being but also strengthen self-esteem and a sense of community belonging.</p>
-            <br>
-            <p>we invite you to join us in this mission. there are several ways to contribute to our project. if you
-                want to make a difference, consider becoming a volunteer. your time and skills can have a significant
-                impact on many lives. alternatively, you can support our work through financial donations. each
-                contribution helps us expand our services and reach more people in need.</p>
-            <br>
-            <p>inclusion and support for the lgbtqapn+ community are responsibilities for all of us. together, we can
-                build a more just and welcoming future for everyone. follow our actions, participate in our activities,
-                and help building4u continue transforming lives.</p>
-            <br>
-            <p>thank you very much for your visit and support!</p>
-            <br>
-            <p>the building4u team <i class="fa-regular fa-building"></i></p>
+            <div id="welcome">
+                <h1>welcome</h1>
+                <br>
+                <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and providing
+                    essential
+                    support to the lgbtqapn+ community. we are an ngo that understands the importance of creating a safe
+                    and
+                    welcoming space for those facing vulnerabilities, and we work tirelessly to offer support in various
+                    areas.</p>
+                <br>
+                <p>at building4u, we believe that health is a fundamental right. therefore, we promote vital healthcare
+                    services, including rapid testing for hiv and other sexually transmitted infections (stis), as well
+                    as
+                    offering specialized psychological support. our team of professionals is prepared to provide the
+                    necessary assistance, ensuring that each individual feels valued and well cared for.</p>
+                <br>
+                <p>in addition to healthcare, we recognize the transformative power of art in people's lives. we offer
+                    theater and painting classes, creating opportunities for our participants to explore their
+                    creativity,
+                    develop new skills, and find a form of personal expression. these activities not only promote
+                    emotional
+                    well-being but also strengthen self-esteem and a sense of community belonging.</p>
+                <br>
+                <p>we invite you to join us in this mission. there are several ways to contribute to our project. if you
+                    want to make a difference, consider becoming a volunteer. your time and skills can have a
+                    significant
+                    impact on many lives. alternatively, you can support our work through financial donations. each
+                    contribution helps us expand our services and reach more people in need.</p>
+                <br>
+                <p>inclusion and support for the LGBTQAPN+ community are responsibilities for all of us. together, we
+                    can
+                    build a more just and welcoming future for everyone. follow our actions, participate in our
+                    activities,
+                    and help building4u continue transforming lives.</p>
+                <br>
+                <p>thank you very much for your visit and support!</p>
+                <br>
+                <p>the building4u team <i class="fa-regular fa-building"></i></p>
+            </div>
         </section>
         <br>
         <br>
         <section>
             <h1>how to help?</h1>
+            <br>
+            <p>you can help our NGO in several meaningful ways. Your contribution is essential for us to continue
+                providing vital support to the LGBTQAPN+ community.</p>
+            <br>
+            <p>one way to contribute is through financial donations. You can make a donation directly to our IBAN:
+                <strong>IE29AIBK93115212345678</strong>. These donations enable us to expand our services and reach more
+                people in need, ensuring that each individual receives the support they deserve
+            </p>
+            <br>
+            <p>In addition to financial donations, you can also make a difference by dedicating your time and skills as
+                a volunteer. We need volunteers to assist in various areas, such as:</p>
+            <br>
+            <ul>
+                <li><strong>Theater and painting classes:</strong> Help inspire and develop the creativity of our
+                    participants, providing them with a form of personal expression and strengthening their self-esteem.
+                </li>
+                <li><strong>Maintenance of building spaces:</strong> Collaborate in maintaining and improving our
+                    spaces, ensuring a safe and welcoming environment for everyone.</li>
+                <li><strong>Welcoming new people:</strong> Be a friendly and welcoming presence for those who come
+                    seeking help, helping them feel valued and welcome.</li>
+                <li><strong>Listening to those in need:</strong> Offer a friendly ear and attentive listening to those
+                    who need to vent and share their experiences.</li>
+            </ul>
+            <br>
+            <p>Your support, whether through financial donations or volunteer work, is essential for us to continue our
+                mission of inclusion and support for the LGBTQAPN+ community. Together, we can build a more just and
+                welcoming future for everyone.</p>
+            <br>
+            <p></p>
+            <br>
+            <p></p>
         </section>
     </main>
 
