add style to welcome

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,13 +29,13 @@
 
 
     <main>
-        <section>
+        <section id="">
             <div id="welcome">
                 <h1>welcome</h1>
                 <br>
                 <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and providing
                     essential
-                    support to the lgbtqapn+ community. we are an ngo that understands the importance of creating a safe
+                    support to the LGBTQAPN+ community. we are an ngo that understands the importance of creating a safe
                     and
                     welcoming space for those facing vulnerabilities, and we work tirelessly to offer support in various
                     areas.</p>
@@ -102,9 +102,6 @@
                 mission of inclusion and support for the LGBTQAPN+ community. Together, we can build a more just and
                 welcoming future for everyone.</p>
             <br>
-            <p></p>
-            <br>
-            <p></p>
         </section>
     </main>
 
