add an image to the page

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,6 +31,8 @@
     <main>
         <section id="">
             <div id="welcome">
+                <img src="assets/image/building_comunity_lgbt_inclusion (1).jpeg"
+                    alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
                 <h1>welcome</h1>
                 <br>
                 <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and supporting the
