--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="">
-            <div id="welcome">
+            <div class="welcome">
                 <img src="assets/image/building_comunity_lgbt_inclusion (1).jpeg"
                     alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
                 <h1>welcome</h1>
