--- a/aboutus.html
+++ b/aboutus.html
@@ -59,6 +59,40 @@
         </section>
         <br>
         <br>
+        <section>
+            <div>
+                <div class="our-facilitator">
+                    <img src="" alt="black woman">
+                </div>
+                <div>
+                    <p class="name-facilitator">Elizabeth Murrayl</p>
+                    <p class="centred-text">NUG President</p>
+            </div>
+            <div>
+                <div class="our-facilitator">
+                    <img src="" alt="black man">
+                </div>
+                <div>
+                    <p class="name-facilitator">Eoin Murphy</p>
+                    <p class="centred-text">Psicology</p>
+            </div>
+            <div>
+                <div class="our-facilitator">
+                    <img src="" alt="white woman">
+                </div>
+                <div>
+                    <p class="name-facilitator">Kelly Nolan</p>
+                    <p class="centred-text">yoga teacher</p>
+            </div>
+            <div>
+                <div class="our-facilitator">
+                    <img src="" alt="white man">
+                </div>
+                <div>
+                    <p class="name-facilitator">Carlo Quinn</p>
+                    <p class="centred-text">theater teacher</p>
+            </div>
+        </section>
     </main>
 
     <footer>
