add style to our team

--- a/aboutus.html
+++ b/aboutus.html
@@ -59,38 +59,39 @@
         </section>
         <br>
         <br>
-        <section>
-            <div>
-                <div class="our-facilitator">
+        <section id="our-facilitator">
+            <div class="team-container">
+                <h1>our facilitators</h1>
+                <div class="team-facilitator">
                     <img src="" alt="black woman">
                 </div>
                 <div>
                     <p class="name-facilitator">Elizabeth Murrayl</p>
-                    <p class="centred-text">NUG President</p>
+                    <p class="text-facilitator">NUG President</p>
             </div>
-            <div>
-                <div class="our-facilitator">
+            <div class="team-container">
+                <div class="team-facilitator">
                     <img src="" alt="black man">
                 </div>
                 <div>
                     <p class="name-facilitator">Eoin Murphy</p>
-                    <p class="centred-text">Psicology</p>
+                    <p class="text-facilitator">Psicology</p>
             </div>
-            <div>
-                <div class="our-facilitator">
+            <div class="team-container">
+                <div class="team-facilitator">
                     <img src="" alt="white woman">
                 </div>
-                <div>
+                <div class="team-container">
                     <p class="name-facilitator">Kelly Nolan</p>
-                    <p class="centred-text">yoga teacher</p>
+                    <p class="text-facilitator">yoga teacher</p>
             </div>
             <div>
-                <div class="our-facilitator">
+                <div class="team-facilitator">
                     <img src="" alt="white man">
                 </div>
                 <div>
                     <p class="name-facilitator">Carlo Quinn</p>
-                    <p class="centred-text">theater teacher</p>
+                    <p class="text-facilitator">theater teacher</p>
             </div>
         </section>
     </main>
