add images to our team

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
 
 
     <main>
-        <section id="">
+        <section id="welcome">
             <div class="welcome">
                 <img src="assets/image/building_comunity_lgbt_inclusion (1).jpeg"
                     alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
@@ -63,23 +63,23 @@
             <div class="team-container">
                 <h1>our facilitators</h1>
                 <div class="team-facilitator">
-                    <img src="" alt="black woman">
+                    <img src="assets/image/president.jpeg" alt="black woman">
                 </div>
                 <div>
                     <p class="name-facilitator">Elizabeth Murrayl</p>
-                    <p class="text-facilitator">NUG President</p>
+                    <p class="text-facilitator">NGO President</p>
             </div>
             <div class="team-container">
                 <div class="team-facilitator">
-                    <img src="" alt="black man">
+                    <img src="assets/image/psychologisty.jpeg" alt="black man">
                 </div>
                 <div>
                     <p class="name-facilitator">Eoin Murphy</p>
-                    <p class="text-facilitator">Psicology</p>
+                    <p class="text-facilitator">psychologist</p>
             </div>
             <div class="team-container">
                 <div class="team-facilitator">
-                    <img src="" alt="white woman">
+                    <img src="assets/image/yoga.jpeg" alt="black woman">
                 </div>
                 <div class="team-container">
                     <p class="name-facilitator">Kelly Nolan</p>
@@ -87,7 +87,7 @@
             </div>
             <div>
                 <div class="team-facilitator">
-                    <img src="" alt="white man">
+                    <img src="assets/image/theater.jpeg" alt="black man">
                 </div>
                 <div>
                     <p class="name-facilitator">Carlo Quinn</p>
