add text to contact us section

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
                 <h1>welcome</h1>
                 <br>
                 <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and supporting the
-                    lgbtqapn+ community. as an ngo, we work tirelessly to create a safe space for those facing
+                    LGBTQAPN+ community. as an ngo, we work tirelessly to create a safe space for those facing
                     vulnerabilities, offering essential support.</p>
                 <br>
                 <p>at building4u, we believe health is a fundamental right. we provide vital healthcare services,
