--- a/howtohelp.html
+++ b/howtohelp.html
@@ -29,38 +29,52 @@
 
 
     <main>
-        <div id="howtohelp">
-            <section>
-                <h1>how to help?</h1>
-                <br>
-                <p>you can help our NGO in several meaningful ways. Your contribution is essential for us to continue
-                    providing vital support to the LGBTQAPN+ community.</p>
-                <br>
-                <p>one way to contribute is through financial donations. You can make a donation directly to our IBAN:
-                    <strong>IE29AIBK93115212345678</strong>. These donations enable us to expand our services and reach more
-                    people in need, ensuring that each individual receives the support they deserve
-                </p>
-                <br>
-                <p>In addition to financial donations, you can also make a difference by dedicating your time and skills as
-                    a volunteer. We need volunteers to assist in various areas, such as:</p>
-                <br>
-                <ul>
-                    <li><strong>Theater and painting classes:</strong> Help inspire and develop the creativity of our
-                        participants, providing them with a form of personal expression and strengthening their self-esteem.
-                    </li>
-                    <li><strong>Maintenance of building spaces:</strong> Collaborate in maintaining and improving our
-                        spaces, ensuring a safe and welcoming environment for everyone.</li>
-                    <li><strong>Welcoming new people:</strong> Be a friendly and welcoming presence for those who come
-                        seeking help, helping them feel valued and welcome.</li>
-                    <li><strong>Listening to those in need:</strong> Offer a friendly ear and attentive listening to those
-                        who need to vent and share their experiences.</li>
-                </ul>
-                <br>
-                <p>Your support, whether through financial donations or volunteer work, is essential for us to continue our
-                    mission of inclusion and support for the LGBTQAPN+ community. Together, we can build a more just and
-                    welcoming future for everyone.</p>
-                <br>
-            </section>
+        <section id="howtohelp">
+            <div class="firsthowtohelp">
+                <div class="howtohelp">
+                    <h1>how to help?</h1>
+                    <br>
+                    <p>you can help our NGO in several meaningful ways. Your contribution is essential for us to
+                        continue
+                        providing vital support to the LGBTQAPN+ community.</p>
+                    <br>
+                    <p>one way to contribute is through financial donations. You can make a donation directly to our
+                        IBAN:
+                        IE29AIBK93115212345678. These donations enable us to expand our services and
+                        reach more
+                        people in need, ensuring that each individual receives the support they deserve
+                    </p>
+                    <br>
+                    <p>In addition to financial donations, you can also make a difference by dedicating your time and
+                        skills as
+                        a volunteer. We need volunteers to assist in various areas, such as:</p>
+                    <br>
+                    <p>Theater and painting classes: Help inspire and develop the creativity of
+                        our
+                        participants, providing them with a form of personal expression and strengthening their
+                        self-esteem.</p>
+                    <p>Maintenance of building spaces: Collaborate in maintaining and improving
+                        our
+                        spaces, ensuring a safe and welcoming environment for everyone.</p>
+                    <p>elcoming new people: Be a friendly and welcoming presence for those who
+                        come
+                        seeking help, helping them feel valued and welcome.</p>
+                    <p>istening to those in need: Offer a friendly ear and attentive listening to
+                        those
+                        who need to vent and share their experiences.</p>
+                    <br>
+                    <p>Your support, whether through financial donations or volunteer work, is essential for us to
+                        continue our
+                        mission of inclusion and support for the LGBTQAPN+ community. Together, we can build a more just
+                        and
+                        welcoming future for everyone.</p>
+                    <br>
+                </div>
+                <div>
+                    <img src="assets/image/howtohelp.jpeg" alt="someone helping">
+                </div>
+            </div>
+        </section>
         </div>
     </main>
 
