add section for depoiments in how to help

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -70,12 +70,41 @@
                         welcoming future for everyone.</p>
                     <br>
                 </div>
-                <div>
+               
                     <img src="assets/image/howtohelp.jpeg" alt="someone helping">
+                
+            </div>
+        </section>
+        <section class="depoiment-section">
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="path_to_image2.jpg" alt="Imagem Testemunho 1">
+                </div>
+                <div class="text-depoiment">
+                    <h1>Carl Moore</h1>
+                    <p>Este é o parágrafo do depoimento 1. O depoente compartilha sua experiência positiva.</p>
+                </div>
+            </div>
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="path_to_image3.jpg" alt="Imagem Testemunho 2">
+                </div>
+                <div class="text-depoiment">
+                    <h1>Jenny Foley</h1>
+                    <p>Este é o parágrafo do depoimento 2. O depoente compartilha sua experiência positiva.</p>
+                </div>
+            </div>
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="path_to_image4.jpg" alt="Imagem Testemunho 3">
+                </div>
+                <div class="text-depoiment">
+                    <h1>Jeff Egan</h1>
+                    <p>Este é o parágrafo do depoimento 3. O depoente compartilha sua experiência positiva.</p>
                 </div>
             </div>
         </section>
-        </div>
+
     </main>
 
     <footer>
