add images to how to help us

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -70,37 +70,40 @@
                         welcoming future for everyone.</p>
                     <br>
                 </div>
-               
-                    <img src="assets/image/howtohelp.jpeg" alt="someone helping">
-                
+
+                <img src="assets/image/howtohelp.jpeg" alt="someone helping">
+
             </div>
         </section>
         <section class="depoiment-section">
             <div class="depoiment">
                 <div class="image-depoiment">
-                    <img src="path_to_image2.jpg" alt="Imagem Testemunho 1">
+                    <img src="assets/image/teenage man1.jpeg" alt="boy image">
                 </div>
                 <div class="text-depoiment">
                     <h1>Carl Moore</h1>
-                    <p>Este é o parágrafo do depoimento 1. O depoente compartilha sua experiência positiva.</p>
+                    <p>finding help at the ngo was essential for me. i felt welcomed and respected. the team offered me
+                        emotional and social support that changed my life for the better. </p>
                 </div>
             </div>
             <div class="depoiment">
                 <div class="image-depoiment">
-                    <img src="path_to_image3.jpg" alt="Imagem Testemunho 2">
+                    <img src="assets/image/teenage girl.jpeg" alt="girl image">
                 </div>
                 <div class="text-depoiment">
                     <h1>Jenny Foley</h1>
-                    <p>Este é o parágrafo do depoimento 2. O depoente compartilha sua experiência positiva.</p>
+                    <p>at the ngo, i found a safe and welcoming space. i participated in artistic activities that helped
+                        me express my feelings and connect with other people.</p>
                 </div>
             </div>
             <div class="depoiment">
                 <div class="image-depoiment">
-                    <img src="path_to_image4.jpg" alt="Imagem Testemunho 3">
+                    <img src="assets/image/teenage man2.jpeg" alt="boy image">
                 </div>
                 <div class="text-depoiment">
                     <h1>Jeff Egan</h1>
-                    <p>Este é o parágrafo do depoimento 3. O depoente compartilha sua experiência positiva.</p>
+                    <p>the ngo helped me overcome difficult moments. the psychological support sessions and group
+                        activities gave me strength and confidence to move forward..</p>
                 </div>
             </div>
         </section>
