--- a/contactus.html
+++ b/contactus.html
@@ -31,7 +31,7 @@
     <main>
         <section id="contact">
             <h1>contact us</h1>
-            <form action="thank_you.html" method="POST">
+            <form action="thank.html" method="POST">
                 <label for="name">name:</label><br>
                 <input type="text" id="name" name="name" required><br>
 
@@ -90,7 +90,9 @@
 
 
         <section>
-            <iframe src="https://bit.ly/2QVfkiy" width="100%" height="300"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.656535670172!2d-6.261353884191905!3d53.34980928208086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e9b1a5a8e33%3A0x62363fa5e2a64e16!2sThe%20Spire%2C%20O'Connell%20Street%20Upper%2C%20North%20City%2C%20Dublin%201%2C%20Ireland!5e0!3m2!1sen!2sus!4v1622700242021!5m2!1sen!2sus"
+                width="100%" height="300"></iframe>
         </section>
 
     </main>
