changes in how to help section

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -29,21 +29,20 @@
 
 
     <main>
-        <section id="howtohelp">
-            <div class="firsthowtohelp">
-                <div class="howtohelp">
-                    <h1>how to help?</h1>
+        <section class="howtohelp-section">
+            <div class="howtohelp">
+                <div class="text-howto">
+                    <h1> how to help?</h1>
                     <br>
-                    <p>you can help our NGO in several meaningful ways. Your contribution is essential for us to
+                    <p> you can help our NGO in several meaningful ways. Your contribution is essential for us to
                         continue
                         providing vital support to the LGBTQAPN+ community.</p>
                     <br>
-                    <p>one way to contribute is through financial donations. You can make a donation directly to our
+                    <p> one way to contribute is through financial donations. You can make a donation directly to our
                         IBAN:
                         IE29AIBK93115212345678. These donations enable us to expand our services and
                         reach more
-                        people in need, ensuring that each individual receives the support they deserve
-                    </p>
+                        people in need, ensuring that each individual receives the support they deserve.</p>
                     <br>
                     <p>In addition to financial donations, you can also make a difference by dedicating your time and
                         skills as
@@ -69,12 +68,14 @@
                         and
                         welcoming future for everyone.</p>
                     <br>
+
                 </div>
-
-                <img src="assets/image/howtohelp.jpeg" alt="someone helping">
-
+                <div class="image-howto">
+                    <img src="assets/image/howtohelp.jpeg" alt="love is love image">
+                </div>
             </div>
         </section>
+
         <section class="depoiment-section">
             <div class="depoiment">
                 <div class="image-depoiment">
