starting the readme page

--- a/contactus.html
+++ b/contactus.html
@@ -31,7 +31,7 @@
     <main>
         <section id="contact">
             <h1>contact us</h1>
-            <form action="thank.html" method="POST">
+            <form action="thank.html" method="GET">
                 <label for="name">name:</label><br>
                 <input type="text" id="name" name="name" required><br>
 
