--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
     <main>
         <section id="welcome">
             <div class="welcome">
-                <img src="assets/image/building_comunity_lgbt_inclusion (1).jpeg"
+                <img src="assets/image/welcome_image.jpeg"
                     alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
                 <h1>welcome</h1>
                 <br>
