--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
     <main>
         <section id="welcome">
             <div class="welcome">
-                <img src="assets/image/welcome_image.jpeg"
+                <img src="assets/image/welcomeimage.jpg"
                     alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
                 <h1>welcome</h1>
                 <br>
@@ -64,7 +64,7 @@
                 <h1>our facilitators</h1>
                 <br>
                 <div class="team-facilitator">
-                    <img src="assets/image/president.jpeg" alt="black woman">
+                    <img src="assets/image/president.jpg" alt="black woman">
                 </div>
                 <div>
                     <p class="name-facilitator">Elizabeth Murrayl</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="team-container">
                 <div class="team-facilitator">
-                    <img src="assets/image/psychologisty.jpeg" alt="black man">
+                    <img src="assets/image/psychologisty.jpg" alt="black man">
                 </div>
                 <div>
                     <p class="name-facilitator">Eoin Murphy</p>
@@ -80,7 +80,7 @@
             </div>
             <div class="team-container">
                 <div class="team-facilitator">
-                    <img src="assets/image/yoga.jpeg" alt="black woman">
+                    <img src="assets/image/yoga.jpg" alt="black woman">
                 </div>
                 <div class="team-container">
                     <p class="name-facilitator">Kelly Nolan</p>
@@ -88,7 +88,7 @@
             </div>
             <div>
                 <div class="team-facilitator">
-                    <img src="assets/image/theater.jpeg" alt="black man">
+                    <img src="assets/image/theater.jpg" alt="black man">
                 </div>
                 <div>
                     <p class="name-facilitator">Carlo Quinn</p>
