--- a/aboutus.html
+++ b/aboutus.html
@@ -33,66 +33,50 @@
             <div class="welcome">
                 <img src="assets/image/welcomeimage.jpg"
                     alt="a beautiful day with blue skies, with a large rainbow covering a city full of buildings with many flowers below">
-                <h1>welcome</h1>
-                <br>
-                <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and supporting the
-                    LGBTQAPN+ community. as an ngo, we work tirelessly to create a safe space for those facing
-                    vulnerabilities, offering essential support.</p>
-                <br>
-                <p>at building4u, we believe health is a fundamental right. we provide vital healthcare services,
-                    including rapid testing for hiv and other stis, and specialized psychological support. our
-                    professionals ensure each individual feels valued and well cared for.</p>
-                <br>
-                <p>we also recognize the transformative power of art. our theater and painting classes offer
-                    opportunities for creativity, skill development, and personal expression, enhancing emotional
-                    well-being and a sense of belonging.</p>
-                <br>
-                <p>join us in this mission by becoming a volunteer or supporting us through financial donations.
-                    volunteers can help with classes, building maintenance, welcoming new people, and offering a
-                    listening ear. each contribution helps us expand our services and reach more people in need. thank
-                    you for your support!</p>
-                <br>
-                <p>thank you very much for your visit and support!</p>
-                <br>
-                <p>the building4u team <i class="fa-regular fa-building"></i></p>
+                <div class="welcome-text">
+                    <h1>welcome</h1>
+                    <p>we are delighted to welcome you to our platform, dedicated to promoting inclusion and supporting
+                        the LGBTQAPN+ community. as an ngo, we work tirelessly to create a safe space for those facing
+                        vulnerabilities, offering essential support.</p>
+                    <p>at building4u, we believe health is a fundamental right. we provide vital healthcare services,
+                        including rapid testing for hiv and other stis, and specialized psychological support. our
+                        professionals ensure each individual feels valued and well cared for.</p>
+                    <p>we also recognize the transformative power of art. our theater and painting classes offer
+                        opportunities for creativity, skill development, and personal expression, enhancing emotional
+                        well-being and a sense of belonging.</p>
+                    <p>join us in this mission by becoming a volunteer or supporting us through financial donations.
+                        volunteers can help with classes, building maintenance, welcoming new people, and offering a
+                        listening ear. each contribution helps us expand our services and reach more people in need.
+                        thank you for your support!</p>
+                    <p>thank you very much for your visit and support!</p>
+                    <p>the building4u team <i class="fa-regular fa-building"></i></p>
+                </div>
             </div>
         </section>
-        <br>
-        <br>
+
         <section id="our-facilitator">
+            <h1>our facilitators</h1>
             <div class="team-container">
-                <h1>our facilitators</h1>
-                <br>
                 <div class="team-facilitator">
                     <img src="assets/image/president.jpg" alt="black woman">
-                </div>
-                <div>
-                    <p class="name-facilitator">Elizabeth Murrayl</p>
+                    <p class="name-facilitator">Elizabeth Murray</p>
                     <p class="text-facilitator">NGO President</p>
-            </div>
-            <div class="team-container">
+                </div>
                 <div class="team-facilitator">
                     <img src="assets/image/psychologisty.jpg" alt="black man">
-                </div>
-                <div>
                     <p class="name-facilitator">Eoin Murphy</p>
                     <p class="text-facilitator">psychologist</p>
-            </div>
-            <div class="team-container">
+                </div>
                 <div class="team-facilitator">
                     <img src="assets/image/yoga.jpg" alt="black woman">
-                </div>
-                <div class="team-container">
                     <p class="name-facilitator">Kelly Nolan</p>
                     <p class="text-facilitator">yoga teacher</p>
-            </div>
-            <div>
+                </div>
                 <div class="team-facilitator">
                     <img src="assets/image/theater.jpg" alt="black man">
-                </div>
-                <div>
                     <p class="name-facilitator">Carlo Quinn</p>
                     <p class="text-facilitator">theater teacher</p>
+                </div>
             </div>
         </section>
     </main>
