adjusting text/style in the how to help section

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -28,10 +28,10 @@
     </header>
 
 
-    section class="howtohelp-section">
+    <section class="howtohelp-section">
     <div class="howtohelp">
         <div class="image-howto">
-            <img src="assets/image/howtohelp.jpeg" alt="love is love image">
+            <img src="assets/image/howtohelp.jpg" alt="love is love image">
         </div>
         <div class="text-howto">
             <h1> how to help?</h1>
@@ -39,26 +39,26 @@
             <p> you can help our NGO in several meaningful ways. Your contribution is essential for us to
                 continue providing vital support to the LGBTQAPN+ community.</p>
             <br>
-            <p> one way to contribute is through financial donations. You can make a donation directly to our
-                <strong>IBAN: IE29AIBK93115212345678</strong>. These donations enable us to expand our services and
+            <p> one way to contribute is through financial donations. you can make a donation directly to our
+               IBAN: IE29AIBK93115212345678. these donations enable us to expand our services and
                 reach more people in need, ensuring that each individual receives the support they deserve.
             </p>
             <br>
-            <p>In addition to financial donations, you can also make a difference by dedicating your time and
-                skills as a volunteer. We need volunteers to assist in various areas, such as:</p>
+            <p>in addition to financial donations, you can also make a difference by dedicating your time and
+                skills as a volunteer. we need volunteers to assist in various areas, such as:</p>
             <br>
-            <p>Theater and painting classes: Help inspire and develop the creativity of
+            <p>theater and painting classes: help inspire and develop the creativity of
                 our participants, providing them with a form of personal expression and strengthening their
                 self-esteem.</p>
-            <p>Maintenance of building spaces: Collaborate in maintaining and improving
+            <p>maintenance of building spaces: collaborate in maintaining and improving
                 our spaces, ensuring a safe and welcoming environment for everyone.</p>
-            <p>Welcoming new people: Be a friendly and welcoming presence for those who
+            <p>welcoming new people: be a friendly and welcoming presence for those who
                 come seeking help, helping them feel valued and welcome.</p>
-            <p>Listening to those in need: Offer a friendly ear and attentive listening to
+            <p>listening to those in need: offer a friendly ear and attentive listening to
                 those who need to vent and share their experiences.</p>
             <br>
-            <p>Your support, whether through financial donations or volunteer work, is essential for us to
-                continue our mission of inclusion and support for the LGBTQAPN+ community. Together, we can build a more
+            <p>your support, whether through financial donations or volunteer work, is essential for us to
+                continue our mission of inclusion and support for the LGBTQAPN+ community. together, we can build a more
                 just
                 and welcoming future for everyone.</p>
             <br>
@@ -69,7 +69,7 @@
     <section class="depoiment-section">
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage man1.jpeg" alt="boy image">
+                <img src="assets/image/teenage man1.jpg" alt="boy image">
             </div>
             <div class="text-depoiment">
                 <h1>Carl Moore</h1>
@@ -79,7 +79,7 @@
         </div>
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage girl.jpeg" alt="girl image">
+                <img src="assets/image/teenage girl.jpg" alt="girl image">
             </div>
             <div class="text-depoiment">
                 <h1>Jenny Foley</h1>
@@ -89,7 +89,7 @@
         </div>
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage man2.jpeg" alt="boy image">
+                <img src="assets/image/teenage man2.jpg" alt="boy image">
             </div>
             <div class="text-depoiment">
                 <h1>Jeff Egan</h1>
