adjusting images how to help section

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -31,7 +31,7 @@
     <section class="howtohelp-section">
     <div class="howtohelp">
         <div class="image-howto">
-            <img src="assets/image/howtohelp.jpg" alt="love is love image">
+            <img src="assets/image/howtohelp1.jpg" alt="love is love image">
         </div>
         <div class="text-howto">
             <h1> how to help?</h1>
@@ -69,7 +69,7 @@
     <section class="depoiment-section">
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage man1.jpg" alt="boy image">
+                <img src="assets/image/teenage man11.jpg" alt="boy image">
             </div>
             <div class="text-depoiment">
                 <h1>Carl Moore</h1>
@@ -79,7 +79,7 @@
         </div>
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage girl.jpg" alt="girl image">
+                <img src="assets/image/teenage girl1 (1).jpg" alt="girl image">
             </div>
             <div class="text-depoiment">
                 <h1>Jenny Foley</h1>
@@ -89,7 +89,7 @@
         </div>
         <div class="depoiment">
             <div class="image-depoiment">
-                <img src="assets/image/teenage man2.jpg" alt="boy image">
+                <img src="assets/image/teenage man21 (1).jpg" alt="boy image">
             </div>
             <div class="text-depoiment">
                 <h1>Jeff Egan</h1>
