--- a/howtohelp.html
+++ b/howtohelp.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Building 4 you. House in Dublin Ireland, where the community LGBTQAPN+ can find some help">
     <meta name="keywords" content="LGBT community, LGBTQAPN, help your community, stay safe, Ireland, Dublin">
-    <title>Building 4 you</title>
+    <title>building4u</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
